--- a/pom.xml
+++ b/pom.xml
@@ -10,15 +10,50 @@
   <name>premier-projet-maven</name>
   <url>http://maven.apache.org</url>
 
+    <build>
+	<finalName>${project.artifactId}</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>dev.App</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+	<!-- configuration du plugin shade -->
+  	<plugin>
+  		<groupId>org.apache.maven.plugins</groupId>
+  		<artifactId>maven-shade-plugin</artifactId>
+  		<version>3.0.0</version>
+  		<executions>
+  			<execution>
+  				<phase>package</phase>
+  				<goals>
+  					<goal>shade</goal>
+  				</goals>
+  			</execution>
+  		</executions>
+  		</plugin>
+        </plugins>
+    </build>
+
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <junit.version>3.8.1</junit.version>
   </properties>
+
 
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
